# NameC

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  DoxygenLayout.xml
include/: NameC.h  NameCXX.h
include/internal/: Gen.h  GenCXX.h
include/internal/GenCXX/: CXXCommon.h  CXXContext.h  CXXDecl.h  CXXDirective.h  CXXExprs.h  CXXFile.h  CXXForwards.h  CXXMixins.h  CXXScope.h  CXXStmts.h  CXXTypes.h
include/internal/Util/: CommonMixins.h  IteratorRange.h  VUIterator.h
src/: CMakeLists.txt
src/GenCXX/: CXXCommon.cpp  CXXContext.cpp  CXXDecl.cpp  CXXDirective.cpp  CXXExprs.cpp  CXXFile.cpp  CXXMixins.cpp  CXXScope.cpp  CXXStmts.cpp  CXXTypes.cpp
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt  DirectiveTest.cpp  ExprTest.cpp  FileTest.cpp  StmtTest.cpp  TypeTest.cpp
test/unittest/GenCXX/: DirectiveTest.cpp  ExprTest.cpp  FileTest.cpp  StmtTest.cpp  TypeTest.cpp
